--- a/index.html
+++ b/index.html
@@ -1,43 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="language" content="english" />
-    <meta httpEquiv="content-type" content="text/html" />
-    <meta name="author" content="tseijp" />
-    <meta name="designer" content="tseijp" />
-    <meta name="publisher" content="tseijp" />
+        <head>
+                <meta charset="UTF-8" />
+                <meta name="language" content="english" />
+                <meta httpEquiv="content-type" content="text/html" />
+                <meta name="author" content="tseijp" />
+                <meta name="designer" content="tseijp" />
+                <meta name="publisher" content="tseijp" />
 
-    <title>PPAD | Party App</title>
-    <meta name="description" content="PPAD | Party App" />
-    <meta name="keywords" content="Mancala, js, react.js, three.js, webgl" />
-    <meta name="robots" content="index, follow" />
-    <meta name="distribution" content="web" />
+                <title>LAPA | Launch Party App</title>
+                <meta name="description" content="LAPA | Launch Party App" />
+                <meta
+                        name="keywords"
+                        content="Board game, js, react.js, three.js, webgl"
+                />
+                <meta name="robots" content="index, follow" />
+                <meta name="distribution" content="web" />
 
-    <meta property="og:title" content="PPAD | Party App" />
-    <meta property="og:type" content="site" />
-    <meta property="og:url" content="https://qala.tsei.jp" />
-    <meta property="og:image" content="/readme.gif" />
-    <meta property="og:site_name" content="PPAD | Party App" />
-    <meta property="og:description" content="PPAD | Party App" />
+                <meta property="og:title" content="LAPA | Launch Party App" />
+                <meta property="og:type" content="site" />
+                <meta property="og:url" content="https://lapa.tsei.jp" />
+                <meta property="og:image" content="/og.jpg" />
+                <meta
+                        property="og:site_name"
+                        content="LAPA | Launch Party App"
+                />
+                <meta
+                        property="og:description"
+                        content="LAPA | Launch Party App"
+                />
 
-    <link rel="apple-touch-icon" href="/favicon.png" />
-    <link rel="apple-touch-icon" sizes="16x16" href="/favicon.png" />
-    <link rel="apple-touch-icon" sizes="32x32" href="/favicon.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png" />
-    <link rel="mask-icon" color="#884D1B" href="/favicon.png" />
-    <link rel="apple-touch-startup-image" href="/favicon.png" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+                <link rel="apple-touch-icon" href="/favicon.ico" />
+                <link
+                        rel="apple-touch-icon"
+                        sizes="16x16"
+                        href="/favicon.ico"
+                />
+                <link
+                        rel="apple-touch-icon"
+                        sizes="32x32"
+                        href="/favicon.ico"
+                />
+                <link
+                        rel="apple-touch-icon"
+                        sizes="180x180"
+                        href="/favicon.ico"
+                />
+                <link rel="mask-icon" color="#884D1B" href="/favicon.ico" />
+                <link rel="apple-touch-startup-image" href="/favicon.ico" />
+                <link rel="icon" type="image/png" href="/favicon.ico" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#884D1B" />
-    <link rel="shortcut icon" href="/favicon.png" />
+                <meta
+                        name="viewport"
+                        content="width=device-width, initial-scale=1.0"
+                />
+                <meta name="theme-color" content="#884D1B" />
+                <link rel="shortcut icon" href="/favicon.ico" />
 
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@tseijp" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+                <meta name="twitter:card" content="summary" />
+                <meta name="twitter:site" content="@tseijp" />
+        </head>
+        <body>
+                <div id="root"></div>
+                <script type="module" src="/src/main.tsx"></script>
+        </body>
 </html>
